// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head should render custom title 1`] = `
<head>
  <title>
    Arbitrary Custom Title
  </title>
  <meta
    charSet="utf-8"
  />
  <meta
    content="IE=Edge"
    httpEquiv="X-UA-Compatible"
  />
  <meta
    content="width=device-width, initial-scale=1"
    name="viewport"
  />
  <meta
    content="telephone=no"
    name="format-detection"
  />
  <meta
    content="yes"
    name="mobile-web-app-capable"
  />
  <meta
    content="yes"
    name="apple-mobile-web-app-capable"
  />
  <meta
    content="#016087"
    name="theme-color"
  />
  <meta
    content="origin"
    name="referrer"
  />
  <link
    as="document"
    href="https://public-api.wordpress.com/wp-admin/rest-proxy/?v=2.0"
    rel="prefetch"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="shortcut icon"
    sizes="16x16 32x32"
    type="image/vnd.microsoft.icon"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="shortcut icon"
    sizes="16x16 32x32"
    type="image/x-icon"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="icon"
    sizes="16x16 32x32"
    type="image/x-icon"
  />
  <link
    href="//arbitrary-cdn/i/favicons/favicon-64x64.png"
    rel="icon"
    sizes="64x64"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/favicon-96x96.png"
    rel="icon"
    sizes="96x96"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/android-chrome-192x192.png"
    rel="icon"
    sizes="192x192"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-57x57.png"
    key="57"
    rel="apple-touch-icon"
    sizes="57x57"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-60x60.png"
    key="60"
    rel="apple-touch-icon"
    sizes="60x60"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-72x72.png"
    key="72"
    rel="apple-touch-icon"
    sizes="72x72"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-76x76.png"
    key="76"
    rel="apple-touch-icon"
    sizes="76x76"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-114x114.png"
    key="114"
    rel="apple-touch-icon"
    sizes="114x114"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-120x120.png"
    key="120"
    rel="apple-touch-icon"
    sizes="120x120"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-144x144.png"
    key="144"
    rel="apple-touch-icon"
    sizes="144x144"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-152x152.png"
    key="152"
    rel="apple-touch-icon"
    sizes="152x152"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-180x180.png"
    key="180"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="http://gmpg.org/xfn/11"
    rel="profile"
  />
  <link
    href="/calypso/manifest.json"
    rel="manifest"
  />
  <link
    as="style"
    href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
    rel="preload"
  />
  <noscript>
    <link
      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
      rel="stylesheet"
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "
			(function() {
				var m = document.createElement( \\"link\\" );
				m.rel = \\"stylesheet\\";
				m.href = \\"https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap\\";
				document.head.insertBefore( m, document.head.childNodes[ document.head.childNodes.length - 1 ].nextSibling );
			})()
			",
      }
    }
    type="text/javascript"
  />
</head>
`;

exports[`Head should render default title 1`] = `
<head>
  <title>
    WordPress.com
  </title>
  <meta
    charSet="utf-8"
  />
  <meta
    content="IE=Edge"
    httpEquiv="X-UA-Compatible"
  />
  <meta
    content="width=device-width, initial-scale=1"
    name="viewport"
  />
  <meta
    content="telephone=no"
    name="format-detection"
  />
  <meta
    content="yes"
    name="mobile-web-app-capable"
  />
  <meta
    content="yes"
    name="apple-mobile-web-app-capable"
  />
  <meta
    content="#016087"
    name="theme-color"
  />
  <meta
    content="origin"
    name="referrer"
  />
  <link
    as="document"
    href="https://public-api.wordpress.com/wp-admin/rest-proxy/?v=2.0"
    rel="prefetch"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="shortcut icon"
    sizes="16x16 32x32"
    type="image/vnd.microsoft.icon"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="shortcut icon"
    sizes="16x16 32x32"
    type="image/x-icon"
  />
  <link
    href="https://arbitrary-favicon-url"
    rel="icon"
    sizes="16x16 32x32"
    type="image/x-icon"
  />
  <link
    href="//arbitrary-cdn/i/favicons/favicon-64x64.png"
    rel="icon"
    sizes="64x64"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/favicon-96x96.png"
    rel="icon"
    sizes="96x96"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/android-chrome-192x192.png"
    rel="icon"
    sizes="192x192"
    type="image/png"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-57x57.png"
    key="57"
    rel="apple-touch-icon"
    sizes="57x57"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-60x60.png"
    key="60"
    rel="apple-touch-icon"
    sizes="60x60"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-72x72.png"
    key="72"
    rel="apple-touch-icon"
    sizes="72x72"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-76x76.png"
    key="76"
    rel="apple-touch-icon"
    sizes="76x76"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-114x114.png"
    key="114"
    rel="apple-touch-icon"
    sizes="114x114"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-120x120.png"
    key="120"
    rel="apple-touch-icon"
    sizes="120x120"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-144x144.png"
    key="144"
    rel="apple-touch-icon"
    sizes="144x144"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-152x152.png"
    key="152"
    rel="apple-touch-icon"
    sizes="152x152"
  />
  <link
    href="//arbitrary-cdn/i/favicons/apple-touch-icon-180x180.png"
    key="180"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="http://gmpg.org/xfn/11"
    rel="profile"
  />
  <link
    href="/calypso/manifest.json"
    rel="manifest"
  />
  <link
    as="style"
    href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
    rel="preload"
  />
  <noscript>
    <link
      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
      rel="stylesheet"
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "
			(function() {
				var m = document.createElement( \\"link\\" );
				m.rel = \\"stylesheet\\";
				m.href = \\"https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap\\";
				document.head.insertBefore( m, document.head.childNodes[ document.head.childNodes.length - 1 ].nextSibling );
			})()
			",
      }
    }
    type="text/javascript"
  />
</head>
`;
